Add derivation on how we can find the optimal parameters for LR

--- a/Chapter 4 Linear Models for classification.ipynb
+++ b/Chapter 4 Linear Models for classification.ipynb
@@ -829,6 +829,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probabilistic Discriminative Models\n",
+    "\n",
+    "The method above is called generative because we are modelling the distributions class conditional probabilities and the prior probabilities. \n",
+    "\n",
+    "$$\n",
+    "    \\frac{P(x |C_1)P(C_1)}{P(x)}\n",
+    "$$\n",
+    "\n",
+    "Here we could generate new data given the distributions that we modelled. However this can be quite computationally expensive and a better way would be to maximize the likelihood of the data via the posterior probability. i.e. we are trying to find a $P(C_1|x)$ that maximizes the data that we have. The main advantage is that we only need to store M parameters to fit the model, one for each of the basis functions\n",
+    "\n",
+    "$$\n",
+    "    p(c_1|\\phi) = \\sigma(w^T\\phi)\n",
+    "$$\n",
+    "\n",
+    "Since we will be using MLE we need the derivative of $\\sigma = \\frac{1}{1 + e^{-a}}$ which van be found using the quotient rule of calculus\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{1 + e^{-a}} \\\\\n",
+    "\\frac{e^{-a}}{(1 + e^{-a})^2} \\\\\n",
+    "\\frac{e^{-a}}{(1 + e^{-a})^2} \\\\\n",
+    "\\frac{1 - 1 + e^{-a}}{(1 + e^{-a})^2} \\\\\n",
+    "\\frac{(1 + e^{-a})}{(1 + e^{-a})^2} \\frac{1}{(1 + e^{-a})^2} \\\\\n",
+    "\\frac{1}{(1 + e^{-a})} \\frac{1}{(1 + e^{-a})^2} \\\\\n",
+    "\\frac{1}{(1 + e^{-a})}(1 - \\frac{1}{(1 + e^{-a})}) \\\\\n",
+    "\\frac{d\\sigma}{a} = \\sigma(a)(1 - \\sigma(a))\n",
+    "$$\n",
+    "\n",
+    "In our case we are going to peform binary classification so the maximum likelihood of a binary classification given a weight vector $w$ can be given a product of bernoulli trials\n",
+    "\n",
+    "$$\n",
+    "p(t|w) = \\prod_{n=1}^Ny_{n}^{t_n} ( 1 - y_n)^{1 - t_n}\n",
+    "$$\n",
+    "\n",
+    "where $t \\in \\{0,1\\}$ and the target $y = P(c_1|\\phi_n)$ is the sigmoid of the linear transformation of the weight vector with the basis functions, i.e. $\\sigma(w^T\\phi)$. Taking the log-likelihood gives us \n",
+    "\n",
+    "$$\n",
+    "    t_n \\; ln(y) + (1 - t_n) \\; ln(1 - y)\n",
+    "$$\n",
+    "\n",
+    "We want to find the derivative wrt $w$ so we need to apply the chain rule, $\\frac{dE}{dy}\\frac{dy}{da}\\frac{da}{w}$ thus we get\n",
+    "\n",
+    "$$\n",
+    "\\frac{dE}{dy}\\frac{dy}{da}\\frac{da}{w} = \\frac{y - t}{y (1 - y)} y (1- y) \\phi \\\\\n",
+    " = (y - t)\\phi \\\\\n",
+    "$$\n",
+    "\n",
+    "This is the same optimization as you would have for linear regression. However, the solution has no closed form solution considering there is a non-linear sigmoidal function. The function IS convex however, meaning that there is 1 optimal solution\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
