Add bias variance decomp to regression

--- a/Chapter 6 Kernel Methods.ipynb
+++ b/Chapter 6 Kernel Methods.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -45,10 +45,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x123597050>"
+       "<matplotlib.collections.PathCollection at 0x136c2b5d0>"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,9 +110,10 @@
     "\n",
     "feature_space = []\n",
     "x_prime = 0\n",
+    "x_prime_vector = create_feature_vector(x_prime, basisfunctions)\n",
     "\n",
     "for x in X:\n",
-    "    feature_space.append((create_feature_vector(x, basisfunctions).T @ create_feature_vector(x_prime, basisfunctions))[0])\n",
+    "    feature_space.append((create_feature_vector(x, basisfunctions).T @ x_prime_vector)[0])\n",
     "\n",
     "plt.figure()\n",
     "for function in basisfunctions:\n",
