add mixture of bernoulli

--- a/PRML/Chapter 9 Mixture models and the EM algorithm.ipynb
+++ b/PRML/Chapter 9 Mixture models and the EM algorithm.ipynb
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification of the MNIST dataset"
+    "# Creating latent variables from the MNIST dataset"
    ]
   },
   {
